fix: Fix usage of deprecated APIs (#879)
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>